// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Funds Transactions component should call icon component 1`] = `
<styled.span
  color="#374654"
  cursorPointer={0}
  fixCrossAxisAlign={null}
  height={null}
  width={null}
>
  <EmptyWallet />
</styled.span>
`;

exports[`Funds Transactions component should match snapshot 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": undefined,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={
            Array [
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-05",
                "grossValue": 13526.47,
                "incomeTax": 0,
                "iof": 0,
                "netValue": 13526.47,
                "type": "APLICAÇÃO",
              },
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-31",
                "grossValue": -15.34,
                "incomeTax": 15.34,
                "iof": 0,
                "netValue": 0,
                "type": "RESGATE PARA PAG. DE IR",
              },
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-31",
                "grossValue": -286.47,
                "incomeTax": 286.47,
                "iof": 0,
                "netValue": 0,
                "type": "RESGATE PARA PAG. DE IR",
              },
            ]
          }
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
    <LinkCard
      dataTest="LinkToSimplified"
      fontSize={14}
      iconType="FiLoader"
      noSpan={true}
      to="/investments/overview?menu=movements&from=funds"
      withUnderline={true}
    />
  </Container>
</styled.div>
`;

exports[`Funds Transactions component should match snapshot with empty page state 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <DefaultContent
      Icon={[Function]}
      data-test="Empty_Position"
      secondaryTexts={
        Array [
          undefined,
        ]
      }
    />
  </Container>
</styled.div>
`;

exports[`Funds Transactions component should match snapshot with loading 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": true,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={
            Array [
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-05",
                "grossValue": 13526.47,
                "incomeTax": 0,
                "iof": 0,
                "netValue": 13526.47,
                "type": "APLICAÇÃO",
              },
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-31",
                "grossValue": -15.34,
                "incomeTax": 15.34,
                "iof": 0,
                "netValue": 0,
                "type": "RESGATE PARA PAG. DE IR",
              },
              Object {
                "assetName": "BAHIA AM FI REFERENCIADO DI",
                "date": "2016-05-31",
                "grossValue": -286.47,
                "incomeTax": 286.47,
                "iof": 0,
                "netValue": 0,
                "type": "RESGATE PARA PAG. DE IR",
              },
            ]
          }
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
  </Container>
</styled.div>
`;

exports[`Funds Transactions component should match snapshot without funds Transactions 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": undefined,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={Array []}
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
    <LinkCard
      dataTest="LinkToSimplified"
      fontSize={14}
      iconType="FiLoader"
      noSpan={true}
      to="/investments/overview?menu=movements&from=funds"
      withUnderline={true}
    />
  </Container>
</styled.div>
`;
